--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1645,7 +1645,7 @@
 
 	body {
 		background-color: #935d8c;
-		color: rgba(255, 255, 255, 0.65);
+		color: white;
 	}
 
 	body, input, select, textarea {
@@ -2242,7 +2242,7 @@
 
 	input[type="checkbox"] + label,
 	input[type="radio"] + label {
-		color: rgba(255, 255, 255, 0.65);
+		color: white;
 	}
 
 		input[type="checkbox"] + label:before,
@@ -3237,7 +3237,7 @@
 		-ms-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
 		transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
 		background-color: #ffffff;
-		color: #636363;
+		color: black;
 		position: absolute;
 		width: 64em;
 		max-width: calc(100% - 4em);
@@ -3250,19 +3250,19 @@
 	}
 
 		#nav input, #nav select, #nav textarea {
-			color: #636363;
+			color: black;
 		}
 
 		#nav a:hover {
-			color: #636363;
+			color: black;
 		}
 
 		#nav strong, #nav b {
-			color: #636363;
+			color: black;
 		}
 
 		#nav h1, #nav h2, #nav h3, #nav h4, #nav h5, #nav h6 {
-			color: #636363;
+			color: black;
 		}
 
 		#nav blockquote {
@@ -3356,24 +3356,24 @@
 
 	#main {
 		background-color: #ffffff;
-		color: #636363;
+		color: black;
 		border-radius: 0.25em;
 	}
 
 		#main input, #main select, #main textarea {
-			color: #636363;
+			color: black;
 		}
 
 		#main a:hover {
-			color: #636363;
+			color: black;
 		}
 
 		#main strong, #main b {
-			color: #636363;
+			color: black;
 		}
 
 		#main h1, #main h2, #main h3, #main h4, #main h5, #main h6 {
-			color: #636363;
+			color: black;
 		}
 
 		#main blockquote {
@@ -3400,7 +3400,7 @@
 		#main .button {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 1px #dddddd;
-			color: #636363 !important;
+			color: black !important;
 		}
 
 			#main input[type="submit"]:hover,
@@ -3462,7 +3462,7 @@
 				}
 
 		#main label {
-			color: #636363;
+			color: black;
 		}
 
 		#main input[type="text"],
@@ -3489,7 +3489,7 @@
 
 		#main input[type="checkbox"] + label,
 		#main input[type="radio"] + label {
-			color: #636363;
+			color: black;
 		}
 
 			#main input[type="checkbox"] + label:before,
@@ -3500,8 +3500,8 @@
 
 		#main input[type="checkbox"]:checked + label:before,
 		#main input[type="radio"]:checked + label:before {
-			background-color: #636363;
-			border-color: #636363;
+			background-color: black;
+			border-color: black;
 			color: #ffffff;
 		}
 
@@ -3541,7 +3541,7 @@
 
 		#main .icon.alt {
 			border-color: #dddddd;
-			color: #636363;
+			color: black;
 		}
 
 			#main .icon.alt:hover {
@@ -3557,7 +3557,7 @@
 		}
 
 		#main dl dt {
-			color: #636363;
+			color: black;
 		}
 
 		#main header.major h2:after {
@@ -3577,7 +3577,7 @@
 			}
 
 		#main table th {
-			color: #636363;
+			color: black;
 		}
 
 		#main table thead {
